force-app/main/default/objects/Lead/fields/Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Source__c</fullName>
    <label>Campaign Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>