force-app/main/default/objects/Lead/fields/Data_Entry_Complete__c.field-meta.xml
<CustomField>
    <fullName>Data_Entry_Complete__c</fullName>
    <label>Data Entry Complete</label>
    <type>Checkbox</type>
</CustomField>