force-app/main/default/objects/Lead/fields/Import_Source__c.field-meta.xml
<CustomField>
    <fullName>Import_Source__c</fullName>
    <label>Import Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>