force-app/main/default/objects/Lead/fields/Lead_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Reason__c</fullName>
    <defaultValue>Other</defaultValue>
    <label>Lead Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Interest</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>