force-app/main/default/objects/Lead/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <defaultValue>Mid-Market</defaultValue>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
                <default>true</default>
                <label>Mid-Market</label>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>